# ASL-App

./: .coveragerc  .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  IMPLEMENTATION_PLAN.md  LICENSE  PRODUCTION_READY.md  README.md  RENDER_DEPLOYMENT.md  RENDER_SETUP.md  SOCIAL_MEDIA_TEMPLATES.md  app.py  asl_feedback.db  auth.py  cache.py  config.py  database.py  deps.py  docker-compose.yml  index.html  logger.py  middleware.py  package-lock.json  package.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt  test_prompts.py  vite.config.ts
.github/workflows/: test.yml
db/: __init__.py  engine.py  models.py
db/crud/: __init__.py  analytics.py  feedback.py
public/: manifest.json  robots.txt  sitemap.xml  sw.js
public/sign-data/: metadata.json
python_code/: asl_dict_langgraph.py  convert_landmarks.py  convert_to_tfjs.py  download_asl_signs.py  download_signing_savvy.py  extract_landmarks_from_video.py  sign_knowledge_base.json
python_code/asl/: __init__.py  cli.py  graph.py  knowledge_base.py  nodes.py  pipeline.py  schemas.py
routes/: __init__.py  admin.py  feedback.py  models.py  translate.py
src/: App.css  App.tsx  index.css  main.tsx
src/components/: Admin.css  Admin.tsx  DictionaryPage.css  DictionaryPage.tsx  ErrorBoundary.css  ErrorBoundary.tsx  FeedbackModal.css  FeedbackModal.tsx  FeedbackWidget.css  FeedbackWidget.tsx  HomePage.css  HomePage.tsx  Layout.css  Layout.tsx  LearningDisclaimer.css  LearningDisclaimer.tsx  LoadingState.css  LoadingState.tsx  SearchBar.css  SearchBar.tsx  SentenceAnimator.css  SentenceAnimator.tsx  SignCard.css  SignCard.tsx
src/constants/: levels.ts
src/contexts/: AppContext.tsx  (+2 more)
tests/: conftest.py  test_analytics.py  test_api.py  test_database.py
(+193 files in other folders)
